--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ main * {
 }
 
 main {
-    max-width: 580px;
+    max-width: 360px;
     width: 90%;
     margin: 32px auto;
 
@@ -160,4 +160,13 @@ main section:nth-child(3) {
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+/* SWIPER */
+section {
+    overflow: hidden;
+}
+section ul {
+    flex-wrap: nowrap;
+    gap: 0;
 }
